fog-aws-testing/terraform/vpc_and_networking.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = {
    Name = "${var.project}-vpc"
    Project = "${var.project}"
  }
}

resource "aws_route53_zone" "private-zone" {
  name = "fogtesting.cloud"
  vpc {
    vpc_id = "${aws_vpc.vpc.id}"
  }
  tags = {
    Name = "${var.project}"
    Project = "${var.project}"
  }
}

resource "aws_subnet" "public-subnet" {
  vpc_id     = "${aws_vpc.vpc.id}"
  cidr_block = "10.0.0.0/24"
  availability_zone = "${var.region}a"
  tags = {
    Name = "${var.project}-public-subnet"
    Project = "${var.project}"
  }
}

resource "aws_route_table" "public-route-table" {
  vpc_id = "${aws_vpc.vpc.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.internet-gateway.id}"
  }
  tags = {
    Name = "${var.project}-routes"
    Project = "${var.project}"
  }
}

resource "aws_route_table_association" "public-route-table-association" {
  subnet_id      = "${aws_subnet.public-subnet.id}"
  route_table_id = "${aws_route_table.public-route-table.id}"
}

resource "aws_internet_gateway" "internet-gateway" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name = "${var.project}-internet-gateway"
    Project = "${var.project}"
  }
}

resource "aws_security_group" "sg-ssh" {
  name        = "allow_ssh"
  description = "Allow all inbound SSH"
  vpc_id      = "${aws_vpc.vpc.id}"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${var.project}-ssh"
    Project = "${var.project}"
  }
}
